[package]
name = "rustl-sdr"
version = "0.2.0"
authors = ["Yuval Adam <_@yuv.al>"]

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rusb = "0.8"

[lib]
name = "rustl_sdr"
path = "src/lib.rs"

[[bin]]
name = "rustl_fm"
path = "src/utils/rustl_fm.rs"

[[bin]]
name = "rustl_test"
path = "src/utils/rustl_test.rs"
